--- a/index.css
+++ b/index.css
@@ -92,3 +92,14 @@ body {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
+
+.restart-button {
+	border: 1px solid white;
+	background-color: #666666;
+	color: white;
+	font-size: 16px;
+	font-family: 'Quicksand', sans-serif;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
